[package]
authors = ["Ryan Thomas <ryan@ryant.org>"]
edition = "2018"
name = "dms"
version = "0.1.0"

[dependencies]
anyhow = "1.0.34"
bytes = "0.6.0"
futures = "0.3.8"
futures-util = "0.3.8"
nom = "6.0.0"
tokio = { version = "0.3.4", features = ["full"] }
tokio-util = {version = "0.5.1", features = ["full"]}
tracing = "0.1.21" 
tracing-subscriber = "0.2.15"
