[package]
name = "dms-server"
version = "0.1.0"
authors = ["Ryan Thomas <ryan@ryant.org>"]
edition = "2018"

[dependencies]
dns-message = { path = "../dns-message" }

anyhow = "1.0.37"
bytes = "1.0.0"
futures = "0.3.8"
futures-util = "0.3.8"
tokio = { version = "1.0.1", features = ["full"] }
tokio-util = { version = "0.6.0", features = ["full"] }
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
